# raceline

./: .gitignore  NORTH_STAR.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
configs/: ppo.yaml
docs/report/: phase1.html
notebooks/: raceline.ipynb
raceline/: __init__.py  eval.py  export_onnx.py  seeding.py  train.py
raceline/agents/: baselines.py
raceline/envs/: racetrack_env.py  track.py
research/: similar-projects.md  stack.md
runs/ppo/: eval.json
scripts/: build_notebook.py
tests/: test_env.py
web/: index.html  policy.onnx  sim.js
