[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raceline"
version = "0.1.0"
description = "Watch a car teach itself to race - a reinforcement-learning agent that learns the racing line"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sandeep Danda" }]
keywords = ["reinforcement-learning", "gymnasium", "ppo", "self-driving", "racing"]

# Versions sourced in research/stack.md.
# Python pinned <3.13 because torch / SB3 wheels are not published for 3.14 yet.
dependencies = [
    "gymnasium==1.3.0",
    "stable-baselines3==2.9.0",
    "numpy>=1.26,<2.3",
    "scipy>=1.11",          # bootstrap CIs in eval
    "torch>=2.2",           # SB3 backend
    "pyyaml>=6.0",          # config loading
    "rich>=13.0",           # readable CLI tables
]

[project.optional-dependencies]
train = ["tensorboard>=2.16"]
export = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxscript>=0.1",      # required by torch>=2.9 onnx exporter
]
dev = ["pytest>=8.0"]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "tqdm>=4.66",          # PPO progress bar in the notebook
]

[tool.setuptools.packages.find]
include = ["raceline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
